# libremcp

./: .gitattributes  .gitignore  .mcp.json-dist  AGENTS.md  API.md  CHANGELOG.md  DEVEL.md  Makefile  QUICKSTART.md  README.md  RESEARCH.md  TOOLS.md  install.ps1  install.sh  pyproject.toml
builder/: Dockerfile  build.sh  docker-compose.yml
dev/: .gitignore  README.md  test_caption.json
dev/docker/: Dockerfile  build-dev.sh  docker-compose.yml
dev/lo-wbox/: config.yaml
dev/mcp-bridge/: server.py
dev/mcp-dev/: config.yaml  mcp-servers.yaml  mcp-test.py  server.py
docs/: known-issues.md  llm-workarounds.md  modules.md  roadmap.md
docs/analysis/: tool-coverage.md
docs/howto/: connect-chatgpt-tailscale.md  setup-forge-images.md  setup-image-gallery.md  setup-ollama-indexation.md
extension/: Jobs.xcu  ProtocolHandler.xcu  description.xml.tpl
plugin/: _layout.py  main.py  options_handler.py  plugin.yaml  version.py
plugin/framework/: __init__.py  config_schema.py  deps.py  dialogs.py  event_bus.py  graphic_query.py  (+13 more)
scripts/: analyze_tool_call_timing.py  build_oxt.py  check-setup.ps1  check-setup.sh  clean-cache.ps1  clean-cache.sh  clear_logs.sh  dev-deploy.ps1  generate_help.py  generate_manifest.py  install-plugin.ps1  install-plugin.sh  launch-lo-debug.sh
tests/: conftest.py  test_calc_tools.py  test_config_schema.py  test_config_service.py  test_doc_tools.py  test_draw_tools.py  test_integration_batch.py  test_integration_dispatch.py  test_integration_events.py  test_integration_mcp_protocol.py  test_services.py  test_stubs.py  test_writer_tools.py
(+136 files in other folders)
