[project]
name = "libremcp"
dynamic = ["version"]
description = "LibreOffice MCP server — document tools for AI clients"
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pyyaml",
    "pytest",
]

[tool.setuptools.dynamic]
version = {attr = "plugin.version.EXTENSION_VERSION"}

[tool.setuptools.packages.find]
include = ["plugin*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
